[gd_scene load_steps=8 format=3 uid="uid://ch8fidgopvyt8"]

[ext_resource type="Script" uid="uid://dqtcodoc3hwn5" path="res://src/debug_display/DebugDisplay.gd" id="1_se2qh"]
[ext_resource type="Theme" uid="uid://d1q1f2f0fyqc6" path="res://assets/monospace_theme.tres" id="2_8afru"]
[ext_resource type="PackedScene" uid="uid://bmhnmmq6ikml8" path="res://src/debug_display/debug_table.tscn" id="3_3vw4w"]
[ext_resource type="Script" uid="uid://bmami7vnnvu0j" path="res://src/debug_display/ScriptPanel.gd" id="3_leycn"]
[ext_resource type="Script" uid="uid://c0san04lqeowe" path="res://src/renderer/pattern_table_texture.gd" id="6_tna6w"]
[ext_resource type="Script" uid="uid://dbnn0bgm33eyb" path="res://addons/table_container/table_container.gd" id="6_u81j0"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tna6w"]
size = Vector2(128, 128)

[node name="DebugDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_se2qh")

[node name="Registers" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(300, 250)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_bottom = 225.0
grow_horizontal = 0

[node name="VBoxContainer" type="GridContainer" parent="Registers"]
custom_minimum_size = Vector2(280, 250)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 2

[node name="A" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/A"]
layout_mode = 2
text = "A"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/A"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "0x0"

[node name="X" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/X"]
layout_mode = 2
text = "X"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/X"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "0x0"

[node name="Y" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/Y"]
layout_mode = 2
text = "Y"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/Y"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "0x0"

[node name="PC" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/PC"]
layout_mode = 2
text = "PC"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/PC"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "0x0"

[node name="SP" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/SP"]
layout_mode = 2
text = "SP"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/SP"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "0x0"

[node name="P" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/P"]
layout_mode = 2
text = "P"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/P"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "0b00000000"

[node name="Cycles" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/Cycles"]
layout_mode = 2
text = "Cycles"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/Cycles"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "1"

[node name="Scanline" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/Scanline"]
layout_mode = 2
text = "Scanline"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/Scanline"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "1"

[node name="Frame" type="HBoxContainer" parent="Registers/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Registers/VBoxContainer/Frame"]
layout_mode = 2
text = "Frame"

[node name="Text" type="TextEdit" parent="Registers/VBoxContainer/Frame"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_8afru")
text = "1"

[node name="MemoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 579.0
grow_vertical = 2

[node name="DebugTable" parent="MemoryPanel" instance=ExtResource("3_3vw4w")]
layout_mode = 1

[node name="ScriptPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -376.0
offset_top = -68.0
offset_bottom = 68.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("3_leycn")

[node name="VBoxContainer" type="VBoxContainer" parent="ScriptPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScriptPanel/VBoxContainer"]
layout_mode = 2

[node name="FileTypeOptionButton" type="OptionButton" parent="ScriptPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Script"
popup/item_0/id = 0
popup/item_1/text = "ROM"
popup/item_1/id = 1

[node name="LoadButton" type="Button" parent="ScriptPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load File"

[node name="ScriptPath" type="TextEdit" parent="ScriptPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
size_flags_horizontal = 3
text = "res://fake_file.tscn"

[node name="RunScriptButton" type="Button" parent="ScriptPanel/VBoxContainer"]
layout_mode = 2
text = "Run Script"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScriptPanel/VBoxContainer"]
layout_mode = 2

[node name="CPUSpeedIndicator" type="Label" parent="ScriptPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Manual"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CPUSpeedSlider" type="HSlider" parent="ScriptPanel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 8.0
rounded = true
tick_count = 9
ticks_on_borders = true

[node name="StepButton" type="Button" parent="ScriptPanel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Step"

[node name="LastCommandLabel" type="RichTextLabel" parent="ScriptPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Last Command: N/A"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
show_hidden_files = true

[node name="LastDeltaPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -187.0
offset_top = -43.0
grow_horizontal = 0
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="LastDeltaPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Last Delta: 0"

[node name="TableContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 585.0
offset_top = -2.0
offset_right = 924.0
offset_bottom = 336.0
script = ExtResource("6_u81j0")
separation_horizontal = null
separation_vertical = null

[node name="PatternTablePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -259.0
offset_right = 287.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="PatternTablePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="PatternTableTexture" type="TextureRect" parent="PatternTablePanel/ScrollContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_tna6w")
script = ExtResource("6_tna6w")

[node name="PatternTableTestButton" type="Button" parent="PatternTablePanel"]
layout_mode = 0
offset_left = 286.0
offset_top = 7.0
offset_right = 444.0
offset_bottom = 38.0
text = "Draw Pattern Table 1"

[node name="PatternTableTestButton2" type="Button" parent="PatternTablePanel"]
layout_mode = 0
offset_left = 286.0
offset_top = 38.0
offset_right = 457.0
offset_bottom = 69.0
text = "Draw Pattern Table 2"

[node name="PaletteOptionButton" type="OptionButton" parent="PatternTablePanel"]
layout_mode = 0
offset_left = 287.0
offset_top = 69.0
offset_right = 459.0
offset_bottom = 100.0
item_count = 8
popup/item_0/text = "Palette 0"
popup/item_0/id = 0
popup/item_1/text = "Palette 1"
popup/item_1/id = 1
popup/item_2/text = "Palette 2"
popup/item_2/id = 2
popup/item_3/text = "Palette 3"
popup/item_3/id = 3
popup/item_4/text = "Palette 4"
popup/item_4/id = 4
popup/item_5/text = "Palette 5"
popup/item_5/id = 5
popup/item_6/text = "Palette 6"
popup/item_6/id = 6
popup/item_7/text = "Palette 7"
popup/item_7/id = 7

[connection signal="item_selected" from="ScriptPanel/VBoxContainer/HBoxContainer/FileTypeOptionButton" to="ScriptPanel" method="_on_file_type_option_button_item_selected"]
[connection signal="pressed" from="ScriptPanel/VBoxContainer/HBoxContainer/LoadButton" to="ScriptPanel" method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ScriptPanel/VBoxContainer/RunScriptButton" to="ScriptPanel" method="_on_RunScriptButton_pressed"]
[connection signal="drag_ended" from="ScriptPanel/VBoxContainer/HBoxContainer2/CPUSpeedSlider" to="ScriptPanel" method="_on_cpu_speed_slider_drag_ended"]
[connection signal="pressed" from="ScriptPanel/VBoxContainer/HBoxContainer2/StepButton" to="ScriptPanel" method="_on_StepButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="ScriptPanel" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="PatternTablePanel/PatternTableTestButton" to="PatternTablePanel/ScrollContainer/PatternTableTexture" method="_on_pattern_table_test_button_pressed"]
[connection signal="pressed" from="PatternTablePanel/PatternTableTestButton2" to="PatternTablePanel/ScrollContainer/PatternTableTexture" method="_on_pattern_table_test_button_2_pressed"]
[connection signal="item_selected" from="PatternTablePanel/PaletteOptionButton" to="PatternTablePanel/ScrollContainer/PatternTableTexture" method="_on_palette_option_button_item_selected"]
